--- a/WebApi2/WebApi2.csproj
+++ b/WebApi2/WebApi2.csproj
@@ -1,5 +1,5 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
-
+<Project Sdk="Microsoft.NET.Sdk.Web" xmlns ="http://schemas.microsoft.com/developer/msbuild/2003">
+	<Target Name = "WebApi2" />
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
